# directive-workspace

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  OWNERSHIP.md  PUBLISH_READINESS.md  README.md  STANDALONE_SURFACE.json  implement.md  index.ts  operator-simplicity-migration.md  operator-start.md  package-lock.json  package.json  road-to-completion.md
architecture/: ARCHITECTURE_EXPLORATION.md  LEGACY_README.md  MIGRATION_COMPLETE.md  README.md
control/: README.md
discovery/: README.md  capability-gaps.json  gap-worklist.json  intake-queue.json
discovery/research-engine/: .env.example  .gitignore  README.md  implement.md  package.json  pyproject.toml
discovery/research-engine/docs/: research-engine-dw-alignment.md  supporting-doctrine-discovery-research-pipeline.md
discovery/research-engine/schemas/: dw_discovery_packet.schema.json  dw_import_bundle.schema.json  source_intelligence_packet.schema.json
discovery/research-engine/src/research_engine/: __init__.py  __main__.py  acquisition.py  catalog.py  cli.py  contracts.py  default_source_intelligence_context.json  discovery.py  export.py  fetch.py  live_extract.py  mission.py  models.py  normalize.py  orchestrator.py  planning.py  score.py
discovery/research-engine/tests/: test_run.py
engine/: README.md  approval-boundary.ts  artifact-link-validation.ts  directive-engine.ts  directive-workspace-lanes.ts  index.ts  lane.ts  routing.ts  source-type-normalization.ts  storage.ts  types.ts  usefulness.ts  workspace-truth.ts
forge/: BOUNDARY_INVENTORY.json  EXTRACTION_CANDIDATES.md  (+5 more)
(+4710 files in other folders)
