[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-engine"
version = "0.1.0"
description = "Artifact-first external research and source acquisition for Directive Workspace-aligned discovery."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
research-engine = "research_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
